tried to fix the header mis-alignment

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,7 @@ img{
 button{
     background-color: red;
 }
+/* .styling_stuff{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
